--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         </div>
         <div class="btn-body">
             <div class="btn-items">
-                <a href="https://mynewbie.life/setup77" rel="nofollow noreferrer" target="_blank">DAFTAR</a>
+                <a href="https://perigacor.top/" rel="nofollow noreferrer" target="_blank">DAFTAR</a>
             </div>
             <div class="btn-items">
-                <a href="https://mynewbie.life/setup77" rel="nofollow noreferrer" target="_blank">MASUK</a>
+                <a href="https://perigacor.top/" rel="nofollow noreferrer" target="_blank">MASUK</a>
             </div>
         </div>
         <table>
@@ -404,15 +404,15 @@
 </footer>
 <div class="nav">
     <div class="menu">
-        <a href="https://mynewbie.life/setup77" rel="nofollow noopener">
+        <a href="https://perigacor.top/" rel="nofollow noopener">
             <amp-img layout="intrinsic" height="100" width="100" src="https://i.ibb.co/Z6ZgVkx/whatsapp.png"></amp-img>
             WhatsApp
         </a>
-        <a href="https://mynewbie.life/setup77" rel="nofollow noopener" class="tada" target="_blank">
+        <a href="https://perigacor.top/" rel="nofollow noopener" class="tada" target="_blank">
             <amp-img class="center" layout="intrinsic" height="120" width="120" src="https://i.ibb.co/v1QP3dD/register.png"></amp-img>
             Daftar
         </a>
-        <a href="https://mynewbie.life/setup77" rel="nofollow noopener" target="_blank">
+        <a href="https://perigacor.top/" rel="nofollow noopener" target="_blank">
             <amp-img layout="intrinsic" height="100" width="100" src="https://i.ibb.co/M95wLV1/livehcat.png"></amp-img>
             Livechat
         </a>
